# ASOracle

./: .gitignore  LICENSE  README.md  example.rkt  lexer.rkt  linear_diff.rkt  mapping.rkt  parser.rkt  resistors.rkt  test.rkt  tree.rkt
egg/: Cargo.toml  egg-herbie.rkt
egg-ld/: Cargo.toml  LICENSE  README.md  egg-herbie.rkt  main.rkt
egg-ld/src/: lib.rs  main.rs  math.rs  rules2.rs  rules4.rs
egg/src/: main.rs  rules2.rs  rules4.rs
linear_diff/: LICENSE-APACHE  LICENSE-MIT  README.md  dsl.rkt  egg.rkt  expander.rkt  info.rkt  ldegg.rkt  lexer.rkt  linear_diff.rkt  main.rkt  parser.rkt  reader.rkt  resistors.rkt  spice-output.rkt  synthesis.rkt  techmap.rkt  verilog-output.rkt
linear_diff/scribblings/: linear_diff.scrbl
