[package]
name = "egg-ld"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egg = "0.9.3"
log = "0.4"
indexmap = "1"
libc = "0.2.125"

num-bigint = "0.4.3"
num-integer = "0.1.45"
num-rational = "0.4.0"
num-traits = "0.2.15"
env_logger = { version = "0.9", default-features = false }

[lib]
name = "egg_math"
crate-type = ["rlib", "cdylib"]

[profile.test]
debug = true
opt-level = 1

[profile.release]
# debug = true
lto = "fat"
codegen-units = 1
